--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,13 @@
 
   <head>
     <meta charset="UTF-8">
-    <title>pixi-webpack-demo</title>
+    <title>Pixi-Webpack Playground!</title>
     <style>
       html,
       body {
         width: 100%;
         height: 100%;
+        
         padding: 0;
         margin: 0;
         overflow: hidden;
@@ -16,6 +17,8 @@
       }
 
       canvas {
+        width: 100%;
+        height: 100%;
         margin: 0;
         padding: 0;
         overflow: hidden;
