Added Viewport Plugin

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 
   <head>
     <meta charset="UTF-8">
+    <script src="./js/vendor/viewport.min.js"></script>
     <title>Pixi-Webpack Playground!</title>
     <style>
       html,
@@ -30,5 +31,4 @@
   <body>
     <canvas id="scene"></canvas>
   </body>
-
 </html>
